tile background created, need to fix shifting of tile

--- a/server/styles/scss/_radar.scss
+++ b/server/styles/scss/_radar.scss
@@ -107,6 +107,15 @@
 
 	.container {
 
+		.map-tiles {
+			position: absolute;
+			width: 1400px;
+
+			img {
+				border: 0px;
+			}
+		}
+
 		.scroll-area {
 			position: relative;
 		}
